# durable-agentic-harness

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  project_description.md
backend/: Dockerfile.fastapi  Dockerfile.worker  pyproject.toml
backend/fastapi_app/: chaos.py  db.py  events.py  main.py  temporal_client.py
backend/fastapi_app/routes/: approvals.py  chaos.py  events.py  internal.py  runs.py
backend/shared/: constants.py  models.py  openai_client.py  prompts.py  selection.py  settings.py  strategies.py
backend/tests/: conftest.py
backend/tests/e2e/: test_smoke.py
backend/tests/unit/: test_drift.py  test_risk.py  test_select_winner.py
backend/worker/: main.py
backend/worker/activities/: backtest.py  backtest_template.py  broker.py  drift.py  llm.py  market.py  news.py  persist.py  risk.py  ui.py
backend/worker/workflows/: backtest.py  hello.py  parent.py
docs/: phase-1-architecture.md  phase-2-architecture.md
docs/superpowers/plans/: 2026-05-21-self-evolving-stock-agent-plan.md
docs/superpowers/specs/: 2026-05-21-self-evolving-stock-agent-design.md
frontend/: components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: ApprovalModal.tsx  ChaosPanel.tsx  EventLog.tsx  MissionControl.tsx  TradingFloor.tsx  WarRoom.tsx
frontend/src/hooks/: useChaos.ts  useSSE.ts  useWorkflow.ts
frontend/src/lib/: api.ts
mockoon/: demo.json
sandbox/: Dockerfile  runner.py
